# mini-oracle-prototype

./: .gitignore  Cargo.toml  README.md  copy-from-server.sh  dotprice.md  dotprice.ndjson  mini-oracle.service  package.json  usdprice.md  usdprice.ndjson
scripts/: README.md  frontend.tsx  index.html  package.json  vite.config.ts
scripts/src/: App.tsx  format.ts  globals.d.ts  theme.css  theme.ts
scripts/src/components/: BreakdownPanel.tsx  Controls.tsx  StatsPanel.tsx  VwapChart.tsx
scripts/src/lib/: lib.test.ts  normalize.ts  parse.ts  pipeline.ts  stats.ts  types.ts
src/: main.rs  venues.rs
