[package]
name = "mini-oracle-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1",    features = ["rt-multi-thread", "macros", "time"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json  = "1"
clap        = { version = "4",    features = ["derive"] }
anyhow      = "1"
futures     = "0.3"
